--- a/old-ui/app/css/fonts.css
+++ b/old-ui/app/css/fonts.css
@@ -338,35 +338,26 @@
 }
 
 @font-face {
-  font-family: 'Montserrat Regular';
-    src: url('/fonts/Montserrat/Montserrat-Regular.woff') format('woff');
-    src: url('/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
+  font-family: 'Barlow Regular';
+    src: url('/fonts/Barlow/Barlow-Regular.woff') format('woff');
+    src: url('/fonts/Barlow/Barlow-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-  font-size: 'small';
 
 }
 
 @font-face {
-  font-family: 'Montserrat Bold';
-    src: url('/fonts/Montserrat/Montserrat-Bold.woff') format('woff');
-    src: url('/fonts/Montserrat/Montserrat-Bold.ttf') format('truetype');
+  font-family: 'Barlow Medium';
+  src: url('/fonts/Barlow/Barlow-Medium.woff') format('woff');
+  src: url('/fonts/Barlow/Barlow-Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Montserrat Light';
-    src: url('/fonts/Montserrat/Montserrat-Light.woff') format('woff');
-    src: url('/fonts/Montserrat/Montserrat-Light.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat UltraLight';
-    src: url('/fonts/Montserrat/Montserrat-UltraLight.woff') format('woff');
-    src: url('/fonts/Montserrat/Montserrat-UltraLight.ttf') format('truetype');
+  font-family: 'Barlow Light';
+    src: url('/fonts/Barlow/Barlow-Light.woff') format('woff');
+    src: url('/fonts/Barlow/Barlow-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
