[GB] Styles confirm transaction header with multiple txns.

--- a/old-ui/app/css/index.css
+++ b/old-ui/app/css/index.css
@@ -515,6 +515,15 @@ button.cancel {
 /*
  * Transaction confirmation screen
  */
+.confirm-transaction-screen .screen-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.confirm-transaction-screen .screen-header .subtitle-wrapper  {
+  max-width: 200px;
+}
+
 .confirmation-buttons {
   display: flex;
   justify-content: space-around;
